--- a/terms.html
+++ b/terms.html
@@ -72,7 +72,7 @@
         <h1>Terms & Conditions</h1>
 
         <h2>Introduction</h2>
-        <p>Welcome to SweepTop. These Terms & Conditions govern your use of our website, sweep-top.com(sweep-top.com). By accessing or using our site, you agree to comply with and be bound by these terms. If you do not agree to these terms, please do not use our website.</p>
+        <p>Welcome to SweepTop. These Terms & Conditions govern your use of our website, s-topcasi.com(s-topcasi.com). By accessing or using our site, you agree to comply with and be bound by these terms. If you do not agree to these terms, please do not use our website.</p>
 
         <h2>Use of the Website</h2>
         <p>You agree to use our website for lawful purposes only. You must not use our site in any way that breaches any applicable local, national, or international law or regulation, or in any manner that is unlawful or fraudulent, or has any unlawful or fraudulent purpose or effect.</p>
@@ -93,7 +93,7 @@
         <p>We may revise these Terms & Conditions from time to time. The most current version will always be posted on our website. By continuing to access or use our site after any changes become effective, you agree to be bound by the revised terms.</p>
 
         <h2>Contact Us</h2>
-        <p>If you have any questions about these Terms & Conditions, please contact us at <a href="mailto:support@sweep-top.com">support@sweep-top.com</a></p>
+        <p>If you have any questions about these Terms & Conditions, please contact us at <a href="mailto:support@s-topcasi.com">support@s-topcasi.com</a></p>
     </div>
 </div>
 
