--- a/privacy.html
+++ b/privacy.html
@@ -76,7 +76,7 @@
         <h1>Privacy Policy</h1>
 
         <p><strong>Introduction</strong></p>
-        <p>Welcome to SweepTop! Your privacy is very important to us, and we are committed to safeguarding your personal information. This Privacy Policy outlines the types of data we collect, how we use it, and the measures we take to ensure your information is protected when you visit our website, <a href="sweep-top.com">sweep-top.com</a>.</p>
+        <p>Welcome to SweepTop! Your privacy is very important to us, and we are committed to safeguarding your personal information. This Privacy Policy outlines the types of data we collect, how we use it, and the measures we take to ensure your information is protected when you visit our website, <a href="s-topcasi.com">s-topcasi.com</a>.</p>
 
         <h2>Information We Collect</h2>
         <p>We may collect the following types of information when you use our website:</p>
