--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SweepTop</title>
+    <title>TopCasi</title>
     <link rel="stylesheet" href="style/css.css">
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
 </head>
