--- a/terms.html
+++ b/terms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SweepTop</title>
+    <title>TopCasi</title>
     <link rel="stylesheet" href="style/css.css">
 
     <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
@@ -72,22 +72,22 @@
         <h1>Terms & Conditions</h1>
 
         <h2>Introduction</h2>
-        <p>Welcome to SweepTop. These Terms & Conditions govern your use of our website, s-topcasi.com(s-topcasi.com). By accessing or using our site, you agree to comply with and be bound by these terms. If you do not agree to these terms, please do not use our website.</p>
+        <p>Welcome to TopCasi. These Terms & Conditions govern your use of our website, s-topcasi.com(s-topcasi.com). By accessing or using our site, you agree to comply with and be bound by these terms. If you do not agree to these terms, please do not use our website.</p>
 
         <h2>Use of the Website</h2>
         <p>You agree to use our website for lawful purposes only. You must not use our site in any way that breaches any applicable local, national, or international law or regulation, or in any manner that is unlawful or fraudulent, or has any unlawful or fraudulent purpose or effect.</p>
 
         <h2>Intellectual Property Rights</h2>
-        <p>The content, layout, design, data, databases, and graphics on this website are protected by intellectual property laws and are owned by SweepTop or its licensors. You may not reproduce, distribute, or use any of the materials on this site without our prior written permission.</p>
+        <p>The content, layout, design, data, databases, and graphics on this website are protected by intellectual property laws and are owned by TopCasi or its licensors. You may not reproduce, distribute, or use any of the materials on this site without our prior written permission.</p>
 
         <h2>Limitation of Liability</h2>
-        <p>SweepTop will not be liable for any direct, indirect, incidental, consequential, or punitive damages arising out of your access to, use of, or inability to use our website. This includes damages to, or viruses that may infect, your computer equipment or other property.</p>
+        <p>TopCasi will not be liable for any direct, indirect, incidental, consequential, or punitive damages arising out of your access to, use of, or inability to use our website. This includes damages to, or viruses that may infect, your computer equipment or other property.</p>
 
         <h2>Disclaimer of Warranties</h2>
-        <p>Our website is provided "as is" without any representations or warranties, express or implied. SweepTop makes no representations or warranties in relation to the information and materials provided on this website.</p>
+        <p>Our website is provided "as is" without any representations or warranties, express or implied. TopCasi makes no representations or warranties in relation to the information and materials provided on this website.</p>
 
         <h2>Governing Law</h2>
-        <p>These Terms & Conditions are governed by and construed in accordance with the laws of the United Kingdom. You agree to submit to the exclusive jurisdiction of the courts of the United Kingdom to resolve any disputes arising out of or in connection with these terms or your use of the website.</p>
+        <p>These Terms & Conditions are governed by and construed in accordance with the laws of the Canada. You agree to submit to the exclusive jurisdiction of the courts of the Canada to resolve any disputes arising out of or in connection with these terms or your use of the website.</p>
 
         <h2>Changes to These Terms</h2>
         <p>We may revise these Terms & Conditions from time to time. The most current version will always be posted on our website. By continuing to access or use our site after any changes become effective, you agree to be bound by the revised terms.</p>
